# cdparanoia-rs

./: Cargo.toml  README.md
cdio-paranoia-sys/: Cargo.toml  README.md  build.rs  wrapper.h
cdio-paranoia-sys/src/: lib.rs
cdparanoia3-sys/: Cargo.toml  README.md  build.rs  wrapper.h
cdparanoia3-sys/src/: lib.rs
src/: error.rs  lib.rs  read.rs
